simplify lintian overrides by omitting redundant package name prefix
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2000 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1-ia32.lintian-overrides.in
+++ b/debian/libcuda1-ia32.lintian-overrides.in
@@ -1,7 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
-libcuda1-ia32: shlib-with-non-pic-code
-libcuda1-ia32: shlib-without-PT_GNU_STACK-section
-libcuda1-ia32: unstripped-binary-or-object
+shlib-with-non-pic-code
+shlib-without-PT_GNU_STACK-section
+unstripped-binary-or-object
 
 # libcudart.so.2 does dlopen("libcuda.so").
-libcuda1-ia32: non-dev-pkg-with-shlib-symlink
+non-dev-pkg-with-shlib-symlink
