--- a/debian/libgl1-nvidia-glx.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx.lintian-overrides.in
@@ -1,26 +1,26 @@
 # The NVIDIA license does not allow any form of modification.
-libgl1-nvidia#LEGACY#-glx: binary-has-unneeded-section
-libgl1-nvidia#LEGACY#-glx: shared-lib-without-dependency-information
-libgl1-nvidia#LEGACY#-glx: shlib-calls-exit
-#!i386#libgl1-nvidia#LEGACY#-glx: shlib-with-executable-stack
-#!amd64#libgl1-nvidia#LEGACY#-glx: shlib-with-non-pic-code
-#!amd64#libgl1-nvidia#LEGACY#-glx: shlib-without-PT_GNU_STACK-section
-libgl1-nvidia#LEGACY#-glx: spelling-error-in-binary
+binary-has-unneeded-section
+shared-lib-without-dependency-information
+shlib-calls-exit
+#!i386#shlib-with-executable-stack
+#!amd64#shlib-with-non-pic-code
+#!amd64#shlib-without-PT_GNU_STACK-section
+spelling-error-in-binary
 
 # Packages built against the NVIDIA libGL should declare dependencies on
 # the free version for Debian's purposes.  Therefore we use a special
 # combination of shlibs files (for libGL.so.1) and symbols files (for all
 # other libraries).
-libgl1-nvidia#LEGACY#-glx: shlibs-declares-dependency-on-other-package libgl1-mesa-glx | libgl1
+shlibs-declares-dependency-on-other-package libgl1-mesa-glx | libgl1
 
 # This package is a strange special case since it overrides standard
 # libraries and diverts them, so the package name won't ever be able to
 # match the library names it provides.
-libgl1-nvidia#LEGACY#-glx: package-name-doesnt-match-sonames
+package-name-doesnt-match-sonames
 
 # Due to complex maintainer script operations (migration of diversions) a
 # simple Breaks+Replaces is not sufficient to ensure clean up-/downgrades.
-libgl1-nvidia#LEGACY#-glx: conflicts-with-version nvidia-glx#LEGACY# *
+conflicts-with-version nvidia-glx#LEGACY# *
 
 # We provide ourselves as a virtual package.
-libgl1-nvidia-glx: package-relation-with-self provides: libgl1-nvidia-glx
+package-relation-with-self provides: libgl1-nvidia-glx
