--- a/debian/libgl1-nvidia-glx-ia32.lintian-overrides.in
+++ b/debian/libgl1-nvidia-glx-ia32.lintian-overrides.in
@@ -1,20 +1,20 @@
 # The NVIDIA license does not allow any form of modification.
-libgl1-nvidia#LEGACY#-glx-ia32: binary-has-unneeded-section
-libgl1-nvidia#LEGACY#-glx-ia32: shared-lib-without-dependency-information
-libgl1-nvidia#LEGACY#-glx-ia32: shlib-calls-exit
-libgl1-nvidia#LEGACY#-glx-ia32: shlib-with-non-pic-code
-libgl1-nvidia#LEGACY#-glx-ia32: shlib-without-PT_GNU_STACK-section
-libgl1-nvidia#LEGACY#-glx-ia32: spelling-error-in-binary
+binary-has-unneeded-section
+shared-lib-without-dependency-information
+shlib-calls-exit
+shlib-with-non-pic-code
+shlib-without-PT_GNU_STACK-section
+spelling-error-in-binary
 
 # Packages built against the NVIDIA libGL should declare dependencies on
 # the free version for Debian's purposes.  Therefore we use a special
 # combination of shlibs files (for libGL.so.1) and symbols files (for all
 # other libraries).
-libgl1-nvidia#LEGACY#-glx-ia32: shlibs-declares-dependency-on-other-package ia32-libs (>= 20090804)
+shlibs-declares-dependency-on-other-package ia32-libs (>= 20090804)
 
 # Due to complex maintainer script operations (migration of diversions) a
 # simple Breaks+Replaces is not sufficient to ensure clean up-/downgrades.
-libgl1-nvidia#LEGACY#-glx-ia32: conflicts-with-version nvidia-glx#LEGACY#-ia32 *
+conflicts-with-version nvidia-glx#LEGACY#-ia32 *
 
 # We provide ourselves as a virtual package.
-libgl1-nvidia-glx-ia32: package-relation-with-self provides: libgl1-nvidia-glx-ia32
+package-relation-with-self provides: libgl1-nvidia-glx-ia32
