--- a/debian/nvidia-vdpau-driver-ia32.lintian-overrides.in
+++ b/debian/nvidia-vdpau-driver-ia32.lintian-overrides.in
@@ -1,4 +1,4 @@
 # The NVIDIA license does not allow any form of modification.
-nvidia-vdpau-driver-ia32: binary-has-unneeded-section
-nvidia-vdpau-driver-ia32: shlib-with-non-pic-code
-nvidia-vdpau-driver-ia32: shlib-without-PT_GNU_STACK-section
+binary-has-unneeded-section
+shlib-with-non-pic-code
+shlib-without-PT_GNU_STACK-section
