Convert nvidia-vdpau-driver{,-ia32} related versioned Conflicts/Replaces to Breaks/Replaces.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2001 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -269,13 +269,13 @@ Enhances:
 Provides:
  vdpau-driver,
 Conflicts:
- nvidia-glx (<< 180.51),
  nvidia-libvdpau,
  nvidia-libvdpau-dev,
  nvidia-libvdpau1,
  nvidia-libvdpau1-driver,
 Breaks:
  libvdpau1 (<< 0.4),
+ nvidia-glx (<< 180.51),
 Replaces:
  nvidia-glx (<< 180.51),
  nvidia-libvdpau,
@@ -317,11 +317,12 @@ Enhances:
 Provides:
  vdpau-driver,
 Conflicts:
- nvidia-glx (<< 180.51),
  nvidia-libvdpau,
  nvidia-libvdpau1,
  nvidia-libvdpau1-ia32,
  nvidia-libvdpau1-driver-ia32,
+Breaks:
+ nvidia-glx (<< 180.51),
 Replaces:
  nvidia-glx (<< 180.51),
  nvidia-libvdpau,
