switch to [arch lists] introduced in lintian 2.5.0
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2070 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-vdpau-driver.lintian-overrides.in
+++ b/debian/nvidia-vdpau-driver.lintian-overrides.in
@@ -1,5 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
 binary-has-unneeded-section
-#!i386#shlib-with-executable-stack
-#!amd64#shlib-with-non-pic-code
-#!amd64#shlib-without-PT_GNU_STACK-section
+[amd64]: shlib-with-executable-stack
+[i386]: shlib-with-non-pic-code
+[i386]: shlib-without-PT_GNU_STACK-section
