--- a/debian/libcuda1.lintian-overrides.in
+++ b/debian/libcuda1.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
-#!amd64#shlib-with-non-pic-code
-#!amd64#shlib-without-PT_GNU_STACK-section
+[i386]: shlib-with-non-pic-code
+[i386]: shlib-without-PT_GNU_STACK-section
 unstripped-binary-or-object
 
 # libcudart.so.2 does dlopen("libcuda.so").
