--- a/debian/libnvidia-compiler.lintian-overrides.in
+++ b/debian/libnvidia-compiler.lintian-overrides.in
@@ -1,3 +1,3 @@
 # The NVIDIA license does not allow any form of modification.
 sharedobject-in-library-directory-missing-soname
-#!amd64#spelling-error-in-binary
+[i386]: spelling-error-in-binary
