--- a/debian/nvidia-glx.lintian-overrides.in
+++ b/debian/nvidia-glx.lintian-overrides.in
@@ -3,9 +3,9 @@ binary-has-unneeded-section
 # keep old override for embedded-libpng until ftp-master verification process uses newer lintian
 embedded-libpng
 embedded-library usr/lib/xorg/modules/drivers/nvidia_drv.so: libpng
-#!i386#shlib-with-executable-stack
-#!amd64#shlib-with-non-pic-code
-#!amd64#shlib-without-PT_GNU_STACK-section
+[amd64]: shlib-with-executable-stack
+[i386]: shlib-with-non-pic-code
+[i386]: shlib-without-PT_GNU_STACK-section
 
 # The alternatives are placed here.
 package-contains-empty-directory usr/lib/xorg/modules/extensions/
