--- a/debian/nvidia-kernel-dkms.lintian-overrides.in
+++ b/debian/nvidia-kernel-dkms.lintian-overrides.in
@@ -1,7 +1,7 @@
 # This is the upstream binary module, which we're not allowed (by the
 # NVIDIA license) to change in any way.  Both architectures are included
 # so that (on i386) we can build the kernel module for the amd64 kernel.
-#!amd64#binary-from-other-architecture
+[i386]: binary-from-other-architecture
 unstripped-binary-or-object
 
 # We provide ourselves as a virtual package.
