--- a/debian/nvidia-libopencl1.lintian-overrides.in
+++ b/debian/nvidia-libopencl1.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
-#!amd64#shlib-with-non-pic-code
-#!amd64#shlib-without-PT_GNU_STACK-section
+[i386]: shlib-with-non-pic-code
+[i386]: shlib-without-PT_GNU_STACK-section
 
 # A single symbolic link does not justify the creation of a new package.
 non-dev-pkg-with-shlib-symlink
