Update symbols control files.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2073 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libgl1-nvidia-glx.symbols.common.in
+++ b/debian/libgl1-nvidia-glx.symbols.common.in
@@ -741,6 +741,7 @@ libGL.so.1 #PACKAGE# #MINVER#
  glGpuSyncReleaseNVX@Base 1.0.9625
  glHint@Base 1.0.4349
  glHistogram@Base 1.0.4349
+ glImportSyncEXT@Base 275.09.04
  glIndexFormatNV@Base 185
  glIndexMask@Base 1.0.4349
  glIndexPointer@Base 1.0.4349
