revert r2075, does not work with unpatched lintian 2.5.0
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2080 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-kernel-dkms.lintian-overrides.in
+++ b/debian/nvidia-kernel-dkms.lintian-overrides.in
@@ -1,9 +1,9 @@
 # This is the upstream binary module, which we're not allowed (by the
 # NVIDIA license) to change in any way.  Both architectures are included
 # so that (on i386) we can build the kernel module for the amd64 kernel.
-[i386]: binary-from-other-architecture
+#!amd64#binary-from-other-architecture
 unstripped-binary-or-object
-spelling-error-in-binary
+nvidia-kernel#LEGACY#-dkms: spelling-error-in-binary
 
 # We provide ourselves as a virtual package.
 package-relation-with-self provides: nvidia-kernel-dkms
