--- a/debian/libcuda1-ia32.lintian-overrides.in
+++ b/debian/libcuda1-ia32.lintian-overrides.in
@@ -1,7 +1,7 @@
 # The NVIDIA license does not allow any form of modification.
-#!amd64#embedded-library usr/lib/libcuda.so.#VERSION#: libm
+embedded-library usr/lib32/libcuda.so.#VERSION#: libm
 shlib-with-executable-stack
-#!amd64#shlib-with-non-pic-code
+shlib-with-non-pic-code
 unstripped-binary-or-object
 
 # libcudart.so.2 does dlopen("libcuda.so").
