--- a/debian/libnvcuvid1.lintian-overrides.in
+++ b/debian/libnvcuvid1.lintian-overrides.in
@@ -1,5 +1,5 @@
 # The NVIDIA license does not allow any form of modification.
-[i386]: shlib-with-non-pic-code
+#!amd64#libnvcuvid1: shlib-with-non-pic-code
 
 # A single symbolic link does not justify the creation of a new package.
-non-dev-pkg-with-shlib-symlink
+libnvcuvid1: non-dev-pkg-with-shlib-symlink
