--- a/debian/nvidia-libopencl1-ia32.lintian-overrides.in
+++ b/debian/nvidia-libopencl1-ia32.lintian-overrides.in
@@ -1,6 +1,6 @@
 # The NVIDIA license does not allow any form of modification.
 shlib-with-executable-stack
-#!amd64#shlib-with-non-pic-code
+shlib-with-non-pic-code
 
 # A single symbolic link does not justify the creation of a new package.
 non-dev-pkg-with-shlib-symlink
