drop superfluous package names from lintian overrides
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/270-beta@2086 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/nvidia-kernel-dkms.lintian-overrides.in
+++ b/debian/nvidia-kernel-dkms.lintian-overrides.in
@@ -3,7 +3,7 @@
 # so that (on i386) we can build the kernel module for the amd64 kernel.
 #!amd64#binary-from-other-architecture
 unstripped-binary-or-object
-nvidia-kernel#LEGACY#-dkms: spelling-error-in-binary
+spelling-error-in-binary
 
 # We provide ourselves as a virtual package.
 package-relation-with-self provides: nvidia-kernel-dkms
