--- a/debian/libnvidia-ml1.lintian-overrides.in
+++ b/debian/libnvidia-ml1.lintian-overrides.in
@@ -1,2 +1,2 @@
 # A single symbolic link does not justify the creation of a new package.
-libnvidia-ml1: non-dev-pkg-with-shlib-symlink
+non-dev-pkg-with-shlib-symlink
