Add Pre-Depends: nvidia-installer-cleanup to nvidia-kernel-dkms.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/trunk@2088 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -153,6 +153,8 @@ Description: NVIDIA binary OpenGL 32-bit libraries${nvidia:LegacyDesc}
 Package: nvidia-kernel-dkms
 Section: non-free/kernel
 Architecture: i386 amd64
+Pre-Depends:
+ nvidia-installer-cleanup,
 Depends:
  dkms,
  nvidia-kernel-common (>= 20100522),
