--- a/debian/rules
+++ b/debian/rules
@@ -14,6 +14,7 @@ WATCH_PATTERN		?=
 XORG_ABI_LIST		?=
 MULTIARCH		?=
 BACKPORT		?=
+LINTIAN25		?= $(MULTIARCH)
 version			 = $(NVIDIA_RELEASE)
 legacy			 = $(if $(NVIDIA_LEGACY),-legacy-$(NVIDIA_LEGACY)xx)
 legacy_description	 = $(if $(NVIDIA_LEGACY), ($(NVIDIA_LEGACY)xx legacy version))
@@ -36,11 +37,8 @@ RENAMED_CONTROL	 = $(patsubst debian/nvidia-glx%,debian/nvidia-glx$(legacy)%,\
 			$(patsubst debian/libgl1-nvidia%,debian/libgl1-nvidia$(legacy)%,\
 			$(patsubst debian/nvidia-kernel%,debian/nvidia-kernel$(legacy)%,\
 				$(RENAME_CONTROL))))
-IA32_OVERRIDES	 = nvidia-vdpau-driver libcuda1 libnvidia-compiler nvidia-libopencl1
-GEN_IA32_OVERRIDES := $(foreach p,$(IA32_OVERRIDES),$(if $(wildcard debian/$p.lintian-overrides*),$p))
 TEMPLATES	:= $(wildcard debian/*.in debian/module/debian/*.in)
 AUTOGEN		+= $(patsubst %.in,%,$(TEMPLATES))
-AUTOGEN		+= $(foreach pkg,$(GEN_IA32_OVERRIDES), debian/$(pkg)-ia32.lintian-overrides)
 AUTOGEN		+= debian/module/debian/changelog
 AUTOGEN		+= $(patsubst %.in,%,$(RENAMED_CONTROL))
 AUTOKEEP	 = debian/watch
@@ -253,13 +251,12 @@ override_dh_strip:
 	perl -p \
 	-e 's{#VERSION#}{$(version)}g;' \
 	-e 's{#LEGACY#}{$(legacy)}g;' \
+	-e 's{#!i386#}{$(if $(LINTIAN25),[!i386]: ,$(if $(filter i386,$(DEB_HOST_ARCH)),#))}g;' \
+	-e 's{#!amd64#}{$(if $(LINTIAN25),[!amd64]: ,$(if $(filter amd64,$(DEB_HOST_ARCH)),#))}g;' \
 	-e 's{#WATCH_PATTERN#}{$(subst \,\\,$(watch_pattern))}g;' \
 	-e 's{#LIBDIR#}{$(libdir)}g;' \
 	-e 's{#PRIVATE#}{$(nvidia_private)}g;' \
 	< $< > $@
-
-%-ia32.lintian-overrides: %.lintian-overrides
-	sed -r -e '/^\[amd64\]: /d; s/^\[i386\]: //; s%usr/lib%usr/lib32%g' $< > $@
 
 debian/module/debian/changelog: debian/changelog
 	sed '1s/^nvidia-graphics-drivers/nvidia-kernel/g' $< > $@
