Override a spelling error in the binary-only part of the kernel module.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2146 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/rules
+++ b/debian/module/debian/rules
@@ -74,6 +74,7 @@ binary-arch: build-stamp
 	dh_installchangelogs NVIDIA_Changelog
 	dh_installmodules
 	dh_bugfiles
+	dh_lintian
 	dh_strip
 	dh_compress
 	dh_fixperms
