--- a/debian/control
+++ b/debian/control
@@ -633,6 +633,7 @@ Description: NVIDIA OpenCL 32-bit library
  32-bit library provided by NVIDIA.
 
 Package: libgl1-nvidia-alternatives
+Section: non-free/oldlibs
 Architecture: i386 amd64
 Depends:
  libgl1-diversions,
@@ -677,6 +678,7 @@ Description: simplifies replacing MESA libGL with GPU vendor libraries (32-bit)
  vendors.  Handles both libGL.so.1 and libGL.so.
 
 Package: libglx-nvidia-alternatives
+Section: non-free/oldlibs
 Architecture: i386 amd64
 Depends:
  libglx-diversions,
