Add XS-Autobuild: yes to debian/control.  See instructions in #602838.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2178 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Build-Depends:
  ia32-libs (>= 20090804) [amd64],
 Standards-Version: 3.9.2
 Homepage: http://www.nvidia.com
+XS-Autobuild: yes
 
 Package: nvidia-glx
 Section: non-free/x11
