install nvidia_drv.so into /usr/lib/nvidia
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2179 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/xserver-xorg-video-nvidia.lintian-overrides.in
+++ b/debian/xserver-xorg-video-nvidia.lintian-overrides.in
@@ -7,3 +7,4 @@ embedded-zlib ./usr/lib/xorg/modules/drivers/nvidia_drv.so
 
 # The alternatives are placed here.
 package-contains-empty-directory usr/lib/xorg/modules/extensions/
+package-contains-empty-directory usr/lib/xorg/modules/drivers/
