--- a/debian/control
+++ b/debian/control
@@ -638,6 +638,7 @@ Package: libgl1-nvidia-alternatives
 Section: non-free/oldlibs
 Architecture: i386 amd64
 Depends:
+ glx-alternative-mesa,
  glx-alternative-nvidia,
  ${misc:Depends}
 Breaks:
@@ -653,9 +654,12 @@ Breaks:
  nvidia-glx-legacy-173xx (<< 173.14.27),
  nvidia-glx-legacy-173xx-dev (<< 173.14.27),
  libgl1-nvidia-legacy-173xx-glx (<< 173.14.30-2~),
-Description: transition to glx-alternative-nvidia
+Description: transition libGL.so* diversions to glx-alternative-nvidia
  This is a transitional package aiding the upgrade to glx-alternative-nvidia.
- It can be safely removed from the system once nothing depends on it.
+ The libGL.so* diversions are now handled by glx-diversions and the
+ alternatives by glx-alternative-mesa.
+ .
+ This package can be safely removed from the system once nothing depends on it.
 
 Package: libgl1-nvidia-alternatives-ia32
 Priority: extra
@@ -683,6 +687,7 @@ Package: libglx-nvidia-alternatives
 Section: non-free/oldlibs
 Architecture: i386 amd64
 Depends:
+ glx-alternative-mesa,
  glx-alternative-nvidia,
  ${misc:Depends}
 Breaks:
@@ -690,7 +695,10 @@ Breaks:
  nvidia-glx-legacy-71xx (<< 71.86.14-3~),
  nvidia-glx-legacy-96xx (<< 96.43.19-2~),
  nvidia-glx-legacy-173xx (<< 173.14.30-2~),
-Description: transition to glx-alternative-nvidia
+Description: transition libgl.so diversions to glx-alternative-nvidia
  This is a transitional package aiding the upgrade to glx-alternative-nvidia.
- It can be safely removed from the system once nothing depends on it.
+ The libglx.so diversions are now handled by glx-diversions and the
+ alternatives by glx-alternative-mesa.
+ .
+ This package can be safely removed from the system once nothing depends on it.
 
