Add Pre-Depends: glx-diversions to the transitional packages to ensure clean diversion upgrades in some corner cases.
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2185 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/control
+++ b/debian/control
@@ -637,6 +637,8 @@ Description: NVIDIA OpenCL 32-bit library
 Package: libgl1-nvidia-alternatives
 Section: non-free/oldlibs
 Architecture: i386 amd64
+Pre-Depends:
+ glx-diversions,
 Depends:
  glx-alternative-mesa,
  glx-alternative-nvidia,
@@ -686,6 +688,8 @@ Description: simplifies replacing MESA libGL with GPU vendor libraries (32-bit)
 Package: libglx-nvidia-alternatives
 Section: non-free/oldlibs
 Architecture: i386 amd64
+Pre-Depends:
+ glx-diversions,
 Depends:
  glx-alternative-mesa,
  glx-alternative-nvidia,
