--- a/debian/libgl1-nvidia-glx.links.in
+++ b/debian/libgl1-nvidia-glx.links.in
@@ -1,4 +1,4 @@
-usr/lib/nvidia/libGL.so.#VERSION#			usr/lib/nvidia/libGL.so.1
-usr/lib/libnvidia-cfg.so.#VERSION#			usr/lib/libnvidia-cfg.so.1
-usr/lib/libXvMCNVIDIA.so.#VERSION#			usr/lib/libXvMCNVIDIA.so.1
-usr/lib/libXvMCNVIDIA.so.#VERSION#			usr/lib/libXvMCNVIDIA_dynamic.so.1
+usr/lib/#PRIVATE#/libGL.so.#VERSION#		usr/lib/#PRIVATE#/libGL.so.1
+usr/lib/#PRIVATE#/libnvidia-cfg.so.#VERSION#	usr/lib/#PRIVATE#/libnvidia-cfg.so.1
+usr/lib/#PRIVATE#/libXvMCNVIDIA.so.#VERSION#	usr/lib/#PRIVATE#/libXvMCNVIDIA.so.1
+usr/lib/#PRIVATE#/libXvMCNVIDIA.so.#VERSION#	usr/lib/#PRIVATE#/libXvMCNVIDIA_dynamic.so.1
