usr #LIBDIR# substitution for installing/linking libraries, prepares multiarch support
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/275.xx@2192 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/libcuda1.links.in
+++ b/debian/libcuda1.links.in
@@ -1,2 +1,2 @@
-usr/lib/libcuda.so.#VERSION#	usr/lib/libcuda.so.1
-usr/lib/libcuda.so.1		usr/lib/libcuda.so
+#LIBDIR#/libcuda.so.#VERSION#	#LIBDIR#/libcuda.so.1
+#LIBDIR#/libcuda.so.1		#LIBDIR#/libcuda.so
