--- a/debian/libgl1-nvidia-glx.links.in
+++ b/debian/libgl1-nvidia-glx.links.in
@@ -1,4 +1,4 @@
-usr/lib/#PRIVATE#/libGL.so.#VERSION#		usr/lib/#PRIVATE#/libGL.so.1
-usr/lib/#PRIVATE#/libnvidia-cfg.so.#VERSION#	usr/lib/#PRIVATE#/libnvidia-cfg.so.1
-usr/lib/#PRIVATE#/libXvMCNVIDIA.so.#VERSION#	usr/lib/#PRIVATE#/libXvMCNVIDIA.so.1
-usr/lib/#PRIVATE#/libXvMCNVIDIA.so.#VERSION#	usr/lib/#PRIVATE#/libXvMCNVIDIA_dynamic.so.1
+#LIBDIR#/#PRIVATE#/libGL.so.#VERSION#			#LIBDIR#/#PRIVATE#/libGL.so.1
+#LIBDIR#/#PRIVATE#/libnvidia-cfg.so.#VERSION#		#LIBDIR#/#PRIVATE#/libnvidia-cfg.so.1
+#LIBDIR#/#PRIVATE#/libXvMCNVIDIA.so.#VERSION#		#LIBDIR#/#PRIVATE#/libXvMCNVIDIA.so.1
+#LIBDIR#/#PRIVATE#/libXvMCNVIDIA.so.#VERSION#		#LIBDIR#/#PRIVATE#/libXvMCNVIDIA_dynamic.so.1
