--- a/debian/libnvcuvid1.links.in
+++ b/debian/libnvcuvid1.links.in
@@ -1,2 +1,2 @@
-usr/lib/libnvcuvid.so.#VERSION#	usr/lib/libnvcuvid.so.1
-usr/lib/libnvcuvid.so.1		usr/lib/libnvcuvid.so
+#LIBDIR#/libnvcuvid.so.#VERSION#	#LIBDIR#/libnvcuvid.so.1
+#LIBDIR#/libnvcuvid.so.1		#LIBDIR#/libnvcuvid.so
