--- a/debian/libgl1-nvidia-glx.install.in
+++ b/debian/libgl1-nvidia-glx.install.in
@@ -1,6 +1,6 @@
-usr/lib/libGL.so.#VERSION#			usr/lib/#PRIVATE#/
-libnvidia-glcore.so.#VERSION#		usr/lib/
-usr/lib/libnvidia-cfg.so.#VERSION#		usr/lib/#PRIVATE#/
-usr/lib/libnvidia-tls.so.#VERSION#
-usr/lib/tls/libnvidia-tls.so.#VERSION#
-usr/X11R6/lib/libXvMCNVIDIA.so.#VERSION#	usr/lib/#PRIVATE#/
+usr/lib/libGL.so.#VERSION#			#LIBDIR#/#PRIVATE#/
+libnvidia-glcore.so.#VERSION#			#LIBDIR#/
+usr/lib/libnvidia-cfg.so.#VERSION#		#LIBDIR#/#PRIVATE#/
+usr/lib/libnvidia-tls.so.#VERSION#		#LIBDIR#/
+usr/lib/tls/libnvidia-tls.so.#VERSION#		#LIBDIR#/tls/
+usr/X11R6/lib/libXvMCNVIDIA.so.#VERSION#	#LIBDIR#/#PRIVATE#/
