--- a/debian/libnvidia-ml1.links.in
+++ b/debian/libnvidia-ml1.links.in
@@ -1,2 +1,2 @@
-usr/lib/libnvidia-ml.so.#VERSION#	usr/lib/libnvidia-ml.so.1
-usr/lib/libnvidia-ml.so.1		usr/lib/libnvidia-ml.so
+#LIBDIR#/libnvidia-ml.so.#VERSION#	#LIBDIR#/libnvidia-ml.so.1
+#LIBDIR#/libnvidia-ml.so.1		#LIBDIR#/libnvidia-ml.so
