--- a/debian/nvidia-libopencl1.links.in
+++ b/debian/nvidia-libopencl1.links.in
@@ -1,2 +1,2 @@
-usr/lib/libOpenCL.so.1.0.0	usr/lib/libOpenCL.so.1
-usr/lib/libOpenCL.so.1		usr/lib/libOpenCL.so
+#LIBDIR#/libOpenCL.so.1.0.0	#LIBDIR#/libOpenCL.so.1
+#LIBDIR#/libOpenCL.so.1		#LIBDIR#/libOpenCL.so
